fix for bug 57951, submenus of scrolling menus positioned incorrectly. r=pinkerton@netscape.com, a=hyatt@netscape.com